# claude-harness

./: .gitignore  README.md  pyproject.toml
harness/: __init__.py  cli.py  config.py  creator.py  critic.py  guard.py  hooks.py  lint_deps.py  lint_quality.py  memory.py  review.py  trace.py  validate.py  verify_action.py
harness/templates/: ARCHITECTURE.md.tmpl  CLAUDE.md.tmpl  DEVELOPMENT.md.tmpl
harness/templates/agents/: harness-coder.md  harness-reviewer.md  harness-setup.md
harness/templates/skills/: harness-critic.md  harness-do.md  harness-init.md  harness-review.md  harness-validate.md
scripts/: validate.sh
tests/: test_config.py  test_creator.py  test_critic.py  test_guard.py  test_hooks.py  test_integration.py  test_lint_deps.py  test_lint_quality.py  test_memory.py  test_review.py  test_trace.py  test_validate.py  test_verify_action.py
tests/fixtures/: sample_arch.md  sample_arch_with_perspectives.md  sample_dev.md  sample_guard.yaml
tests/fixtures/existing_project/: Makefile
tests/fixtures/existing_project/cmd/: main.go
tests/fixtures/existing_project/internal/config/: config.go
tests/fixtures/existing_project/internal/services/: user_service.go
tests/fixtures/existing_project/internal/utils/: helper.go
tests/fixtures/sample_project/api/handlers/: user_handler.go
tests/fixtures/sample_project/cmd/: main.go
tests/fixtures/sample_project/internal/core/: engine.go
tests/fixtures/sample_project/internal/services/: user_service.go
tests/fixtures/sample_project/internal/types/: user.go
(+1 files in other folders)
