[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-harness"
version = "0.2.0"
description = "Portable harness engineering toolkit for Claude Code"
requires-python = ">=3.10"
license = "MIT"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[project.scripts]
harness = "harness.cli:main"
